--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import numpy as np"
    ]
   },
   {
@@ -77,13 +76,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "py_list = list(range(5))\n",
+    "py_range = range(5)\n",
+    "\n",
+    "array_from_list = np.array(py_list)\n",
+    "array_from_range = np.array(py_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "range(0, 5)\n",
+      "\n",
+      "\n",
+      "[0 1 2 3 4]\n",
+      "[0 1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(py_list)\n",
+    "print(py_range)\n",
+    "print('\\n')\n",
+    "print(array_from_list)\n",
+    "print(array_from_range)"
    ]
   },
   {
@@ -108,30 +136,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.651  1.7272 1.8542 1.905  1.9812]\n"
+     ]
+    }
+   ],
    "source": [
     "# use the conversion rate for turning height in inches to meters\n",
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
-    "#Your code here"
+    "#Your code here\n",
+    "list_height_meters = np.array(list_height_inches) * .0254\n",
+    "print(list_height_meters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 66.94635366  62.48326341  98.18798536  91.49335    118.27189146]\n"
+     ]
+    }
+   ],
    "source": [
     "# use the conversion rate for turning weight in pounds to kilograms\n",
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
     "\n",
-    "#your code here"
+    "#your code here\n",
+    "list_weight_kilograms = np.array(list_weight_pounds) / 2.2406\n",
+    "print(list_weight_kilograms)"
    ]
   },
   {
@@ -151,13 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24.56024987 20.94490744 28.55914462 25.21155131 30.13178803]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "list_of_bmis = list_weight_kilograms / (list_height_meters ** 2)\n",
+    "print(list_of_bmis)"
    ]
   },
   {
@@ -169,13 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "identity = np.ones(len(list_of_bmis))\n",
+    "print(identity)"
    ]
   },
   {
@@ -187,13 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24.56024987 20.94490744 28.55914462 25.21155131 30.13178803]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "bmi_ones = list_of_bmis * identity\n",
+    "print(bmi_ones)"
    ]
   },
   {
@@ -206,11 +274,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file has 21 lines.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ],\n",
+       "       [  1.  , 105.  ,  47.  ,  85.4 ,   1.75,   5.1 ,  63.  ,  33.  ],\n",
+       "       [  2.  , 115.  ,  49.  ,  94.2 ,   2.1 ,   3.8 ,  70.  ,  14.  ],\n",
+       "       [  3.  , 116.  ,  49.  ,  95.3 ,   1.98,   8.2 ,  72.  ,  10.  ],\n",
+       "       [  4.  , 117.  ,  50.  ,  94.7 ,   2.01,   5.8 ,  73.  ,  99.  ],\n",
+       "       [  5.  , 112.  ,  51.  ,  89.4 ,   1.89,   7.  ,  72.  ,  95.  ],\n",
+       "       [  6.  , 121.  ,  48.  ,  99.5 ,   2.25,   9.3 ,  71.  ,  10.  ],\n",
+       "       [  7.  , 121.  ,  49.  ,  99.8 ,   2.25,   2.5 ,  69.  ,  42.  ],\n",
+       "       [  8.  , 110.  ,  47.  ,  90.9 ,   1.9 ,   6.2 ,  66.  ,   8.  ],\n",
+       "       [  9.  , 110.  ,  49.  ,  89.2 ,   1.83,   7.1 ,  69.  ,  62.  ],\n",
+       "       [ 10.  , 114.  ,  48.  ,  92.7 ,   2.07,   5.6 ,  64.  ,  35.  ],\n",
+       "       [ 11.  , 114.  ,  47.  ,  94.4 ,   2.07,   5.3 ,  74.  ,  90.  ],\n",
+       "       [ 12.  , 115.  ,  49.  ,  94.1 ,   1.98,   5.6 ,  71.  ,  21.  ],\n",
+       "       [ 13.  , 114.  ,  50.  ,  91.6 ,   2.05,  10.2 ,  68.  ,  47.  ],\n",
+       "       [ 14.  , 106.  ,  45.  ,  87.1 ,   1.92,   5.6 ,  67.  ,  80.  ],\n",
+       "       [ 15.  , 125.  ,  52.  , 101.3 ,   2.19,  10.  ,  76.  ,  98.  ],\n",
+       "       [ 16.  , 114.  ,  46.  ,  94.5 ,   1.98,   7.4 ,  69.  ,  95.  ],\n",
+       "       [ 17.  , 106.  ,  46.  ,  87.  ,   1.87,   3.6 ,  62.  ,  18.  ],\n",
+       "       [ 18.  , 113.  ,  46.  ,  94.5 ,   1.9 ,   4.3 ,  70.  ,  12.  ],\n",
+       "       [ 19.  , 110.  ,  48.  ,  90.5 ,   1.88,   9.  ,  71.  ,  99.  ],\n",
+       "       [ 20.  , 122.  ,  56.  ,  95.7 ,   2.09,   7.  ,  75.  ,  99.  ]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Open a text file (csv files are just plaintext seperated by commas)\n",
     "f = open('bp.txt')\n",
@@ -224,10 +328,16 @@
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
+    "my_matrix = np.zeros([n_rows, n_cols])\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
+    "for num, line in enumerate(f):\n",
+    "    if num > 0:\n",
+    "        my_matrix[num,:] = line.split('\\t')\n",
+    "    \n",
     "    #3) Update each row of the matrix with the new stream of data\n",
     "    #Hint: skip the first row (its just column names, not the data.)\n",
-    "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n"
+    "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n",
+    "my_matrix"
    ]
   },
   {
@@ -242,6 +352,15 @@
    "metadata": {},
    "source": [
     "In this lab, we practiced creating NumPy arrays from both lists and rages. We then practiced peforming math operations like converting imperial measurements to metric measurements on each element of a NumPy array to create new arrays with new values. Finally, we used both of our new NumPy arrays to operate on eachother and create new arrays containing the BMIs from our arrays containing heights and weights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finished January 16, 2019"
    ]
   }
  ],
@@ -261,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
